# pwp_ah

./: .gitignore  API-consumption.md  Docker-compose.yml  README.md  RESTTful-API-description.md  RESTful-API-documentation-and-hypermedia.md  azure.md  db.sql  docker-compose.yml  dupm.sql  meetings.md  nginx.conf  restful-api-implementation.md
client/: Cargo.toml  backup  readme.md
client/src/: cli.rs  lib.rs  main.rs  models.rs
client/src/api/: auctions.rs  bids.rs  categories.rs  items.rs  mod.rs  users.rs  utils.rs
client/src/models/: auctions.rs  bids.rs  item.rs  mod.rs  models.rs
client/tests/: api_tests.rs  auction_tests.rs  bid_tests.rs  categories_tests.rs  category_tests.rs  cli_tests.rs  deserialize_tests.rs  item_tests.rs  user_tests.rs  utils_tests.rs
emailService/: .eslintrc.json  Dockerfile  index.js  package-lock.json  package.json
emailService/models/: auction.js  bid.js  index.js  item.js
emailService/service/: email.js
emailService/utils/: config.js  db.js
server/: .dockerignore  .eslintrc.json  Dockerfile  app.js  eslint.config.mjs  index.js  jest.config.js  package-lock.json  package.json
server/controllers/: auction.js  auctions.js  auctions_by_user.js  authentication.js  bid.js  bids.js  bids_by_auction.js  category.js  item.js  item_controller.js  items.js  profile.js  user.js  user_controller.js  users.js
server/docs/: swagger-bundled.yaml  swagger.yaml
server/models/: auction.js  bid.js  category.js  index.js  item.js  user.js
server/router/: index.js  profile.js
server/script/: CreateAuction.js  DataPopulator.js
(+71 files in other folders)
