[package]
name = "auction_cli"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
httpmock = "0.7"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
